--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl_phone_field: ^3.2.0
   font_awesome_flutter: ^10.8.0
+  flutter_svg: ^2.0.17
+  pinput: ^5.0.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
